res/myStyles.css
* {
  box-sizing: border-box;
}
html, body {
  height: 100%;
  margin: 0px;
  background-color: #1abc9c;
  background-color: #2196F3;
  line-height: 1.4em;
  font-family: 'Roboto',sans-serif,Helvetica,Arial,Sans-serif;
  -webkit-font-smoothing: antialiased;
}

a {
  color: #161826;
  text-decoration: none;
}

blockquote {
  font-size: 1.4em;
  background: #f9f9f9;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}
blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}
blockquote p {
  display: inline;
}

.container-firstImpression {
  width:100%;
  height: 100%;
  text-align: center;
}

.rightCover, .leftCover {
  height: auto;
  width:100%;
  padding-bottom: 15px;
}


.vmid {
}

.columnBehaviour  {
  float: left;
}

.bigText {
  font-size: 3.6em;
  line-height: 1.1em;
  font-weight: 100;
  text-shadow: 0 0 6px #727272;
  margin: 10px;
}

.whiteText {
  text-shadow: 0 0 2px #727272;
  color: #FFF;
}

.descMe {
  font-size: 1.6em;
  margin-left: 30px;
  margin-right: 30px;
  color: #ededed;
}


#cardContainer {
  height: 50%;
  margin-top: 5%;
  padding-bottom: 8%;
  padding: 10px;
}

.links-p {
  margin: 5px;
  min-height: 80%;
  margin-top: 3%;
}


.buttonWhite {
  border-radius: 2px;
  font-weight: 400;
  font-size: 1.4em;
  color: #0070c9;
  background-color: #ecf0f1;
  display: inline-block;
  padding: 13px;
  margin: 8px 8px;
  cursor:pointer;
  min-width: 130px;
  min-height: 48px;

  -webkit-transition: all 150ms ease-in;
  -webkit-transform: scale(1);
  -ms-transition: all 150ms ease-in;
  -ms-transform: scale(1);
  -moz-transition: all 150ms ease-in;
  -moz-transform: scale(1);
  transition: all 150ms ease-in;
  transform: scale(1);

  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.buttonWhite:hover, .buttonWhite:focus {
  background-color: #f1f1f1;
  -webkit-transition: all 150ms ease-in;
  -webkit-transform: scale(1.05);
  -ms-transition: all 150ms ease-in;
  -ms-transform: scale(1.05);
  -moz-transition: all 150ms ease-in;
  -moz-transform: scale(1.05);
  transition: all 150ms ease-in;
  transform: scale(1.05	);
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}


.tile {
  width: 47%;
  cursor:pointer;
  margin: 3px 0px 0px 3px;
  padding: 5%;
  background-color: #ecf0f1;
  
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);

  font-weight: 400;
  font-size: 1.4em;
  color: #0070c9;
  min-width: 120px;
  background-size: 100% 200%;
  background-image: linear-gradient(to bottom, #ecf0f1 50%, #FCFCFC 50%);
  transition: background-position 0.7s;
  -webkit-transition: background-position 0.7s;
-moz-transition: background-position 0.7s;


}

.tile:hover {

  background-color: #f9f9f9;
  background-position: 0 100%;
}

#education {
  width: 95%;
}

.topNarrator{
  font-weight: 400;
  font-size: 1.3em;
margin-top: 3%;
margin-bottom: 5px;
}


@media (min-width: 200px) {

  .rightBorder {
    border-left: 2px solid rgba(199, 199, 199, 0.67);
  }

  #topNarrator {
    display: none;
  }

.bodyPad {
  border-radius: 2px;
  width: 90%;
}

}

@media (max-width: 400px) {
  .rightCover, .leftCover {
    background-color: #2196F3;
    background: linear-gradient(141deg, #158ae7 0%, #2196F3 61%, #0e89eb 75%);
  }

}

@media (min-width: 768px) {

  .rightCover, .leftCover {
    height: 100%;
    width:50%;
  }

  #BioHolder {
    margin-top: 20px;
  }

  #cardContainer {
    margin-top: 25%;
  }

}

@media (min-width: 1000px) {

  .bodyPad {
    width: 70%;
  }

  #topNarrator {
    display: block;
  }

  #aboutme {
    width: 44%;
  }

  #myskills {
    width: 54%;
  }
  #projects {
    width: 39%;
  }
  #github {
    width: 25%;
  }

  #education {
    width: 34%
  }
}

.blink_me {
  animation: blinker 2s linear infinite;
}

@keyframes blinker {
  50% { opacity: 0.0; }
}


.downTown {
  padding-top: 25px;
  padding-bottom: 25px;
  background-color: #2ECC71;
  background: linear-gradient(141deg, #2ECC71 0%, #10c95f 61%, #2ECC71 75%);
  width:100%;
  text-align: center;

}

.bodyPad {
  background: #FAFAFA;
  margin: auto;
  margin-top: 25px;
  margin-bottom: 25px;
  padding: 20px;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

#mypic {
  border: 2px solid white;
  margin: 0;
  height: 150px;
  width: 150px;
  box-sizing: border-box;
  border-radius: 70%;
  vertical-align:left;
}

.left-col {
	margin: 0; 
	width: 25%;
	float:left;
}
.right-col {
	margin: 0;
	overflow:hidden;
}

h2 {
  font-weight: normal;
    color: #111111;
    border-bottom: 2px solid #d7d7d7;
}
.txt {
  text-align: left;
  margin: 0;
  margin-top: 10px;
  color: #111111;
  font-size: 18px;
  line-height: 1.4em;
}

.landgraph {
  background:url(skillgraph.png) no-repeat;
  background-size:contain;
  margin: auto;
  min-height:400px;
  min-width:550px;
  max-width:90%;
  display: block;
}

.goUp {
  margin-top: 10px;
  width: 100%;
  text-align: right;
  line-height: 1.5em;
}

.goUp a {
  font-weight: bold;
  font-size: 1.4em;
  color: #e7e7e7;
  background: #2ECC71;
  padding: 7px;
}

